# degen-sql

./: Cargo.toml  README.md
src/: lib.rs  pagination.rs  sql_builder.rs  tiny_safe_string.rs
src/db/postgres/: mod.rs  postgres_db.rs
src/db/postgres/models/: invoice_templates_model.rs  migrations_model.rs  mod.rs  model.rs  payments_model.rs  premium_status_model.rs  webhook_urls_model.rs
src/db/postgres/scripts/: migrate.rs  rollback_full.rs
